content/media/omx/MediaCodecReader.h
@@ -100,6 +100,7 @@ protected:
 
     // pipeline parameters
     android::sp<android::MediaSource> mSource;
+    bool mSourceIsStopped;
     android::sp<android::MediaCodecProxy> mCodec;
     android::Vector<android::sp<android::ABuffer> > mInputBuffers;
     android::Vector<android::sp<android::ABuffer> > mOutputBuffers;
